# My-Fungible-Token

./: Cargo.toml  README.md
src/: error.rs  internal.rs  lib.rs  metadata.rs
tests/: sandbox.rs
tests/common/: mod.rs
