[package]
name = "my_ft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "5.1.0"
near-primitives-core = "0.21.2"
getrandom = { version = "0.2", features = ["js"] }
anyhow = "1.0.82"

[dev-dependencies]
near-workspaces = { version = "0.10.0", features = ["unstable"] }
near-gas = "0.2.5"
tokio = { version = "1.37.0", default-features = false }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
